Add Roles pagination

--- a/VacationManager/VacationManager/Views/Users/Index.cshtml
+++ b/VacationManager/VacationManager/Views/Users/Index.cshtml
@@ -38,6 +38,7 @@
     <button type="button" class="btn btn-secondary" onclick="clearFilter()">Clear Filter</button>
 </form>
 
+<label for="pageSizeSelector">Page size:</label>
 <select id="pageSizeSelector">
     <option value="10">10</option>
     <option value="25">25</option>
