--- a/VacationManager/VacationManager/Views/Projects/Index.cshtml
+++ b/VacationManager/VacationManager/Views/Projects/Index.cshtml
@@ -42,7 +42,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+    <tbody id="tableBody">
         @foreach (var item in Model)
         {
             <tr>
