--- a/VacationManager/VacationManager/Views/Roles/Index.cshtml
+++ b/VacationManager/VacationManager/Views/Roles/Index.cshtml
@@ -33,7 +33,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+    <tbody id="tableBody">
     @foreach (var item in Model) 
     {
         <tr>
