--- a/VacationManager/VacationManager/Views/Teams/Index.cshtml
+++ b/VacationManager/VacationManager/Views/Teams/Index.cshtml
@@ -46,7 +46,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody id="teamTableBody">
+    <tbody id="tableBody">
         @foreach (var item in Model)
         {
             <tr>
