--- a/VacationManager/VacationManager/Views/Roles/Create.cshtml
+++ b/VacationManager/VacationManager/Views/Roles/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create role</h1>
 
-<h4>RoleModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
