--- a/VacationManager/VacationManager/Views/Roles/Edit.cshtml
+++ b/VacationManager/VacationManager/Views/Roles/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Role Edit</h1>
 
-<h4>RoleModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
