--- a/VacationManager/VacationManager/Views/LeaveRequests/Create.cshtml
+++ b/VacationManager/VacationManager/Views/LeaveRequests/Create.cshtml
@@ -113,7 +113,7 @@
     </form>
     <form id="medical-leave-form" asp-action="Create" enctype="multipart/form-data" style="display: none;">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <h1>Sick Leave</h1>
+        <h1>Medical Leave</h1>
         <!-- Common fields for both normal and medical leave -->
         <div class="form-group" style="display: none;">
             <label asp-for="RequestCreationDate" class="control-label"></label>
