--- a/VacationManager/VacationManager/Views/VacationDays/Edit.cshtml
+++ b/VacationManager/VacationManager/Views/VacationDays/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit User's Vacation Days</h1>
 
-<h4>VacationDaysModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,7 +23,7 @@
                 <span asp-validation-for="Year" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="VacationDays" class="control-label"></label>
+                <label asp-for="VacationDays" class="control-label">Vacation Days</label>
                 <input asp-for="VacationDays" class="form-control" />
                 <span asp-validation-for="VacationDays" class="text-danger"></span>
             </div>
