--- a/VacationManager/VacationManager/Views/LeaveRequests/Delete.cshtml
+++ b/VacationManager/VacationManager/Views/LeaveRequests/Delete.cshtml
@@ -6,36 +6,36 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this leave request?</h3>
 <div>
-    <h4>LeaveRequest</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RequestCreationDate)
+            @* @Html.DisplayNameFor(model => model.RequestCreationDate) *@
+            Request Creation Date
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.RequestCreationDate)
         </dd>
-        <dt class = "col-sm-2">
+        @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ApplicantId)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ApplicantId)
-        </dd>
+        </dd> *@
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StartDate)
+            Start Date
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.StartDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EndDate)
+            End Date
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.EndDate)
         </dd>
-        <dt class = "col-sm-2">
+       @*  <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsSickLeave)
         </dt>
         <dd class = "col-sm-10">
@@ -76,7 +76,7 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsCompleted)
-        </dd>
+        </dd> *@
     </dl>
     
     <form asp-action="Delete">
