--- a/VacationManager/VacationManager/Views/LeaveRequests/Details.cshtml
+++ b/VacationManager/VacationManager/Views/LeaveRequests/Details.cshtml
@@ -4,44 +4,46 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Leave Request Details</h1>
 
 <div>
-    <h4>LeaveRequest</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RequestCreationDate)
+            @* @Html.DisplayNameFor(model => model.RequestCreationDate) *@
+            Request Creation Date
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.RequestCreationDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ApplicantId)
+            @* @Html.DisplayNameFor(model => model.ApplicantId) *@
+            Applicant
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ApplicantId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StartDate)
+            @* @Html.DisplayNameFor(model => model.StartDate) *@
+            Start Date
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.StartDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EndDate)
+            End Date
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.EndDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsSickLeave)
+           Sick Leave
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsSickLeave)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MedicalCertificate)
+            Medical Certificate
         </dt>
         <dd class="col-sm-10">
             @if (Model.MedicalCertificate != null)
@@ -54,31 +56,31 @@
             }
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsPaid)
+            Paid
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsPaid)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsHalfDay)
+            Half Day
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsHalfDay)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsApproved)
+            Approved
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsApproved)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ApproverId)
+            Approver
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ApproverId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsCompleted)
+            Completed
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsCompleted)
