--- a/VacationManager/VacationManager/Views/Users/Delete.cshtml
+++ b/VacationManager/VacationManager/Views/Users/Delete.cshtml
@@ -6,9 +6,8 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this user?</h3>
 <div>
-    <h4>UserModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -18,13 +17,13 @@
             @Html.DisplayFor(model => model.Username)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
+            First Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
+            Last Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastName)
