--- a/VacationManager/VacationManager/Views/Users/Details.cshtml
+++ b/VacationManager/VacationManager/Views/Users/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>User Details</h1>
 
 <div>
-    <h4>UserModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -17,13 +16,13 @@
             @Html.DisplayFor(model => model.Username)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
+            First Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
+            Last Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastName)
@@ -41,12 +40,13 @@
             @ViewData["TeamName"]
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsAway)
+            @* @Html.DisplayNameFor(model => model.IsAway) *@
+            Away
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsAway)
         </dd>
-        <dt class = "col-sm-2">
+        @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsHalfDay)
         </dt>
         <dd class = "col-sm-10">
@@ -57,7 +57,7 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsSickLeave)
-        </dd>
+        </dd> *@
     </dl>
 </div>
 
