--- a/VacationManager/VacationManager/Views/LeaveRequests/Delete.cshtml
+++ b/VacationManager/VacationManager/Views/LeaveRequests/Delete.cshtml
@@ -15,7 +15,7 @@
             Request Creation Date
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RequestCreationDate)
+            @Model.RequestCreationDate.ToString("dd-MM-yyyy")
         </dd>
         @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ApplicantId)
@@ -27,13 +27,14 @@
             Start Date
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StartDate)
+            @Model.StartDate.ToString("dd-MM-yyyy")
         </dd>
         <dt class = "col-sm-2">
             End Date
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EndDate)
+            @* @Html.DisplayFor(model => model.EndDate) *@
+            @Model.EndDate.ToString("dd-MM-yyyy")
         </dd>
        @*  <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsSickLeave)
